--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
-  "dependencies": {
-    "express": "^4.18.2"
-  },
-  "scripts": {
-    "start": "node server.js"
-  },
   "name": "express.js-note-taker",
   "version": "1.0.0",
+  "description": "",
   "main": "server.js",
-  "directories": {
-    "lib": "lib"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "devDependencies": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
